<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ORDERED_HASHSET_BUCKET_NODE" Id="{9eba6f26-a592-01af-2779-6bbe3d0572e0}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}
TYPE ST_ORDERED_HASHSET_BUCKET_NODE :
STRUCT
	Data 	: T_Generic;
	pNext,
	pBefore,
	pAfter 	: POINTER TO ST_ORDERED_HASHSET_BUCKET_NODE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>